feat(active): enhance gameplay with slow falling, inventory fixes, and event handling